???? - 2.7
- Updated to PMD 3.7
- Fixed Bug [1501422] PMD Plugin: example box is not updated when new items hover filed in jEdit Plugins Bug tracker.
- Changed the way Rules are managed and given for execution to PMD due to addition of new languages to PMD and was giving error due to language mismatch.

10th January 2006 - 2.6O
- Updated to PMD 3.4
- Updated to jEdit 4.3pre3 version.
- Added "Ignore Literals & identifiers" option for CPD.

16th August 2004 - 2.5
- Updated to PMD 1.9
- Removed Recursive Directory options and integrated them into FileChooser itself.
- Complete redesign of the way PMD Rules and Copy/Paste Detector are used.
- Fixed improper highlighting of Rule Violations. Because of this bug, any open file in jEdit was showing errors of other files too.
- Lots of code cleanup and optimizations.

22 March 2004- 2.4
- Optimized usage of ErrorSource for faster Error Highlighting.
- Fixed Run on save running when the buffer is non-Java.
- Updated to pmd 1.6
- Added option to export PMD results to files in various formats such as HTML, XML, Text, CSV etc.
- Added a new feature to show Progressbar when working on Large file sets.
- Progressbar color configured via jEdit Properties.
- Improvements in Copy/Paste Detector

October 31st 2003 - 2.3
1. Updated to PMD 1.3

August 18th 2003 - 2.2
1. Updated to PMD 1.2.1
2. Updated to jEdit 4.2 API changes
3. Added PMD in jEdit's File System Browser Plugins Menu.


May 19th 2003 - 2.1:
Added "clear ErrorList" option - thanks to Randall Schultz for the suggestion.
Added "check all open buffers" option - thanks to Randall Schultz for the suggestion.
Added support to define Custom RuleSets thereby facilitating integration of Custom Rulesets with built-in rulesets & their independent development.
Added C/C++, PHP support to Copy/Paste Detector. Now you can find out duplicate code in your C/C++ & PHP code besides the usual Java code.

April 18 2003 - 2.0:
Jiger Patel integrated CPD functionality.