@@ -51,6 +51,7 @@ Take a look at the <a href="#releasenotes">Release Notes and Changelog</a> for m
 		 <li>Updated to PMD 3.7</li>
 		 <li>Fixed Bug [1501422] PMD Plugin: example box is not updated when new items hover filed in jEdit Plugins Bug tracker.</li>
 		 <li>Changed the way Rules are managed and given for execution to PMD due to addition of new languages to PMD and was giving error due to language mismatch.</li>
+		 <li>Added new option "Print Rulename in ErrorList" which is helpful to trace down what rule is generating this error.</li>
 		</ol>
 		<h3>2.6</h3>
 		<ol>
