@@ -2,6 +2,7 @@
 - Updated to PMD 3.7
 - Fixed Bug [1501422] PMD Plugin: example box is not updated when new items hover filed in jEdit Plugins Bug tracker.
 - Changed the way Rules are managed and given for execution to PMD due to addition of new languages to PMD and was giving error due to language mismatch.
+- Added new option "Print Rulename in ErrorList" which is helpful to trace down what rule is generating this error.
 
 10th January 2006 - 2.6O
 - Updated to PMD 3.4
